--- a/index.html
+++ b/index.html
@@ -22,8 +22,25 @@
 </head>
 
 <body>
+    <div class="container">
+    <div class="form-wrapper">
+        <img src="./images/bg-heading-03.jpg" alt="screenshot">
+        <div class="form-content">
+        <h4>Registration Info</h4>
+    <form class="contact-form" action="contact.html" method="post">
+        <input type="text" class="contact-form-text" placeholder="Name" required>
+        <input type="date" class="contact-form-text" placeholder="date" required>
+        <input type="text" class="contact-form-text" placeholder="Experience"required>
+        <input type="email" class="contact-form-text" placeholder="Email" required>
+        <input type="phone" class="contact-form-text" placeholder="Phone (optional)">
+        <input type="submit" class="contact-form-button" value="Submit">
+    </form>
+        </div>
+    </div>
+    </div> 
 
-    <!-- Your html here -->
+
+   
 </body>
 
 </html>
